Bug 1032755 - Add NS_ERROR_MODULE_DOM_BLUETOOTH to nsError list and allow it to be used to create dom exception. r=smaug, f=dhylands, btian